@@ -1,147 +1,4 @@
 /* config.in.  Generated from configure.ac by autoheader.  */
-/* Enable GNU extensions on systems that have them.  */
-#ifndef _GNU_SOURCE
-# undef _GNU_SOURCE
-#endif
-
-/* Define if pstatus_t type is available */
-#undef HAVE_PSTATUS_T
-
-/* Define if prrun_t type is available */
-#undef HAVE_PRRUN_T
-
-/* Define if fpregset_t type is available. */
-#undef HAVE_FPREGSET_T
-
-/* Define if gregset_t type is available. */
-#undef HAVE_GREGSET_T
-
-/* Define if <sys/procfs.h> has prgregset_t. */
-#undef HAVE_PRGREGSET_T
-
-/* Define if <sys/procfs.h> has prfpregset_t. */
-#undef HAVE_PRFPREGSET_T
-
-/* Define if <sys/procfs.h> has lwpid_t. */
-#undef HAVE_LWPID_T
-
-/* Define if <sys/procfs.h> has psaddr_t. */
-#undef HAVE_PSADDR_T
-
-/* Define if <sys/procfs.h> has prgregset32_t. */
-#undef HAVE_PRGREGSET32_T
-
-/* Define if <sys/procfs.h> has prfpregset32_t. */
-#undef HAVE_PRFPREGSET32_T
-
-/* Define if <sys/procfs.h> has prsysent_t */
-#undef HAVE_PRSYSENT_T
-
-/* Define if <sys/procfs.h> has pr_sigset_t */
-#undef HAVE_PR_SIGSET_T
-
-/* Define if <sys/procfs.h> has pr_sigaction64_t */
-#undef HAVE_PR_SIGACTION64_T
-
-/* Define if <sys/procfs.h> has pr_siginfo64_t */
-#undef HAVE_PR_SIGINFO64_T
-
-/* Define if <link.h> exists and defines struct link_map which has
-   members with an ``l_'' prefix.  (For Solaris, SVR4, and
-   SVR4-like systems.) */
-#undef HAVE_STRUCT_LINK_MAP_WITH_L_MEMBERS
-
-/* Define if <link.h> exists and defines struct link_map which has
-  members with an ``lm_'' prefix.  (For SunOS.)  */
-#undef HAVE_STRUCT_LINK_MAP_WITH_LM_MEMBERS
-
-/* Define if <link.h> exists and defines a struct so_map which has
-  members with an ``som_'' prefix.  (Found on older *BSD systems.)  */
-#undef HAVE_STRUCT_SO_MAP_WITH_SOM_MEMBERS
-
-/* Define if <sys/link.h> has struct link_map32 */
-#undef HAVE_STRUCT_LINK_MAP32
-
-/* Define if <sys/link.h> has link_map32 (solaris sparc-64 target) */
-#undef _SYSCALL32
-
-/* Define if the prfpregset_t type is broken. */
-#undef PRFPREGSET_T_BROKEN
-
-/* Define if you want to use new multi-fd /proc interface
-   (replaces HAVE_MULTIPLE_PROC_FDS as well as other macros). */
-#undef NEW_PROC_API
-
-/* Define if ioctl argument PIOCSET is available. */
-#undef HAVE_PROCFS_PIOCSET
-
-/* Define if using Solaris thread debugging.  */
-#undef HAVE_THREAD_DB_LIB
-
-/* Define if you support the tkill syscall.  */
-#undef HAVE_TKILL_SYSCALL
-
-/* Define on a GNU/Linux system to work around problems in sys/procfs.h.  */
-#undef START_INFERIOR_TRAPS_EXPECTED
-#undef sys_quotactl
-
-/* Define if you have HPUX threads */
-#undef HAVE_HPUX_THREAD_SUPPORT
-
-/* Define to 1 if NLS is requested.  */
-#undef ENABLE_NLS
-
-/* Define as 1 if you have catgets and don't want to use GNU gettext.  */
-#undef HAVE_CATGETS
-
-/* Define as 1 if you have gettext and don't want to use GNU gettext.  */
-#undef HAVE_GETTEXT
-
-/* Define as 1 if you have the stpcpy function.  */
-#undef HAVE_STPCPY
-
-/* Define if your locale.h file contains LC_MESSAGES.  */
-#undef HAVE_LC_MESSAGES
-
-/* Define if you want to use the full-screen terminal user interface.  */
-#undef TUI
-
-/* Define if <proc_service.h> on solaris uses int instead of
-   size_t, and assorted other type changes. */
-#undef PROC_SERVICE_IS_OLD
-
-/* Define if the simulator is being linked in.  */
-#undef WITH_SIM
-
-/* Define if <sys/ptrace.h> defines the PTRACE_GETREGS request.  */
-#undef HAVE_PTRACE_GETREGS
-
-/* Define if <sys/ptrace.h> defines the PTRACE_GETFPXREGS request.  */
-#undef HAVE_PTRACE_GETFPXREGS
-
-/* Define if <sys/ptrace.h> defines the PT_GETDBREGS request.  */
-#undef HAVE_PT_GETDBREGS
-
-/* Define if <sys/ptrace.h> defines the PT_GETXMMREGS request.  */
-#undef HAVE_PT_GETXMMREGS
-
-/* Define if libunwind library is being used.  */
-#undef HAVE_LIBUNWIND
-
-/* hostfile */
-#undef GDB_XM_FILE
-
-/* targetfile */
-#undef GDB_TM_FILE
-
-/* nativefile */
-#undef GDB_NM_FILE
-
-/* Define to 1 so <sys/proc.h> gets a definition of anon_hdl.  Works
-   around a <sys/proc.h> problem on IRIX 5.  */
-#ifndef _KMEMUSER
-#undef _KMEMUSER
-#endif
 
 /* Define to 1 if the compiler supports long long. */
 #undef CC_HAS_LONG_LONG
@@ -178,8 +35,17 @@
 /* Host long double floatformat */
 #undef GDB_HOST_LONG_DOUBLE_FORMAT
 
+/* nativefile */
+#undef GDB_NM_FILE
+
 /* Define to the default OS ABI for this configuration. */
 #undef GDB_OSABI_DEFAULT
+
+/* targetfile */
+#undef GDB_TM_FILE
+
+/* hostfile */
+#undef GDB_XM_FILE
 
 /* Define to 1 if you have `alloca', as a function or macro. */
 #undef HAVE_ALLOCA
@@ -273,6 +139,9 @@
 /* Define if <sys/procfs.h> has gregset_t. */
 #undef HAVE_GREGSET_T
 
+/* Define if you have HPUX threads */
+#undef HAVE_HPUX_THREAD_SUPPORT
+
 /* Define if you have the iconv() function. */
 #undef HAVE_ICONV
 
@@ -287,6 +156,9 @@
 
 /* Define to 1 if you have the `m' library (-lm). */
 #undef HAVE_LIBM
+
+/* Define if libunwind library is being used. */
+#undef HAVE_LIBUNWIND
 
 /* Define to 1 if you have the <libunwind.h> header file. */
 #undef HAVE_LIBUNWIND_H
@@ -369,6 +241,9 @@
 /* Define if <sys/procfs.h> has prgregset_t. */
 #undef HAVE_PRGREGSET_T
 
+/* Define if ioctl argument PIOCSET is available. */
+#undef HAVE_PROCFS_PIOCSET
+
 /* Define to 1 if you have the <proc_service.h> header file. */
 #undef HAVE_PROC_SERVICE_H
 
@@ -393,8 +268,20 @@
 /* Define if <sys/procfs.h> has pstatus_t. */
 #undef HAVE_PSTATUS_T
 
+/* Define if sys/ptrace.h defines the PTRACE_GETFPXREGS request. */
+#undef HAVE_PTRACE_GETFPXREGS
+
+/* Define if sys/ptrace.h defines the PTRACE_GETREGS request. */
+#undef HAVE_PTRACE_GETREGS
+
 /* Define to 1 if you have the <ptrace.h> header file. */
 #undef HAVE_PTRACE_H
+
+/* Define if sys/ptrace.h defines the PT_GETDBREGS request. */
+#undef HAVE_PT_GETDBREGS
+
+/* Define if sys/ptrace.h defines the PT_GETXMMREGS request. */
+#undef HAVE_PT_GETXMMREGS
 
 /* Define to 1 if you have the `putenv' function. */
 #undef HAVE_PUTENV
@@ -462,6 +349,17 @@
 /* Define to 1 if you have the <string.h> header file. */
 #undef HAVE_STRING_H
 
+/* Define if <sys/link.h> has struct link_map32 */
+#undef HAVE_STRUCT_LINK_MAP32
+
+/* Define if <link.h> exists and defines struct link_map which has members
+   with an ``lm_'' prefix. (For SunOS.) */
+#undef HAVE_STRUCT_LINK_MAP_WITH_LM_MEMBERS
+
+/* Define if <link.h> exists and defines struct link_map which has members
+   with an ``l_'' prefix. (For Solaris, SVR4, and SVR4-like systems.) */
+#undef HAVE_STRUCT_LINK_MAP_WITH_L_MEMBERS
+
 /* Define to 1 if your system has struct lwp. */
 #undef HAVE_STRUCT_LWP
 
@@ -473,6 +371,10 @@
 
 /* Define to 1 if `r_gs' is member of `struct reg'. */
 #undef HAVE_STRUCT_REG_R_GS
+
+/* Define if <link.h> exists and defines a struct so_map which has members
+   with an ``som_'' prefix. (Found on older *BSD systems.) */
+#undef HAVE_STRUCT_SO_MAP_WITH_SOM_MEMBERS
 
 /* Define to 1 if `st_blksize' is member of `struct stat'. */
 #undef HAVE_STRUCT_STAT_ST_BLKSIZE
@@ -557,10 +459,13 @@
 /* Define to 1 if you have the <thread_db.h> header file. */
 #undef HAVE_THREAD_DB_H
 
+/* Define if using Solaris thread debugging. */
+#undef HAVE_THREAD_DB_LIB
+
 /* Define to 1 if you have the <time.h> header file. */
 #undef HAVE_TIME_H
 
-/* Define if we can use the tkill syscall. */
+/* Define if you support the tkill syscall. */
 #undef HAVE_TKILL_SYSCALL
 
 /* Define to 1 if you have the `ttrace' function. */
@@ -611,6 +516,10 @@
 /* Define as const if the declaration of iconv() needs const. */
 #undef ICONV_CONST
 
+/* Define if you want to use new multi-fd /proc interface (replaces
+   HAVE_MULTIPLE_PROC_FDS as well as other macros). */
+#undef NEW_PROC_API
+
 /* Name of this package. */
 #undef PACKAGE
 
@@ -629,11 +538,18 @@
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
 
+/* Define if the prfpregset_t type is broken. */
+#undef PRFPREGSET_T_BROKEN
+
 /* Define to 1 if the "%Lg" format works to print long doubles. */
 #undef PRINTF_HAS_LONG_DOUBLE
 
 /* Define to 1 if the "%ll" format works to print long longs. */
 #undef PRINTF_HAS_LONG_LONG
+
+/* Define if <proc_service.h> on solaris uses int instead of size_t, and
+   assorted other type changes. */
+#undef PROC_SERVICE_IS_OLD
 
 /* Define to the type of arg 3 for ptrace. */
 #undef PTRACE_TYPE_ARG3
@@ -661,6 +577,9 @@
 	STACK_DIRECTION = 0 => direction of growth unknown */
 #undef STACK_DIRECTION
 
+/* Define on a GNU/Linux system to work around problems in sys/procfs.h. */
+#undef START_INFERIOR_TRAPS_EXPECTED
+
 /* Define to 1 if the `S_IS*' macros in <sys/stat.h> do not work properly. */
 #undef STAT_MACROS_BROKEN
 
@@ -678,6 +597,9 @@
    when building for Cygwin. */
 #undef USE_WIN32API
 
+/* Define if the simulator is being linked in. */
+#undef WITH_SIM
+
 /* Define to 1 if on AIX 3.
    System headers sometimes define this.
    We just want to avoid a redefinition error message.  */
@@ -685,9 +607,21 @@
 # undef _ALL_SOURCE
 #endif
 
+/* Enable GNU extensions on systems that have them.  */
+#ifndef _GNU_SOURCE
+# undef _GNU_SOURCE
+#endif
+
+/* Define to 1 so <sys/proc.h> gets a definition of anon_hdl. Works around a
+   <sys/proc.h> problem on IRIX 5. */
+#undef _KMEMUSER
+
 /* Define to 1 to avoid a clash between <widec.h> and <wchar.h> on Solaris
    2.[789] when using GCC. */
 #undef _MSE_INT_H
+
+/* Define if <sys/link.h> has link_map32 (solaris sparc-64 target) */
+#undef _SYSCALL32
 
 /* Define to empty if `const' does not conform to ANSI C. */
 #undef const
@@ -706,6 +640,9 @@
 
 /* Define to `unsigned' if <sys/types.h> does not define. */
 #undef size_t
+
+/* Define on a GNU/Linux system to work around problems in sys/procfs.h. */
+#undef sys_quotactl
 
 /* Define as `fork' if `vfork' does not work. */
 #undef vfork
