@@ -1,3 +1,11 @@
+2005-07-03  Steve Ellcey  <sje@cup.hp.com>
+
+	* configure.ac: Add arguments to AC_DEFINE calls.
+	* acconfig.h: Remove file.
+	* acinclude.m4 (AC_GNU_SOURCE): Remove definition.
+	* configure: Regenerate.
+	* config.in: Regenerate.
+
 2005-07-01  Mark Kettenis  <kettenis@gnu.org>
 
 	* mips-tdep.c (mips_insn16_frame_prev_register)
